--- a/README.Rmd
+++ b/README.Rmd
@@ -15,10 +15,25 @@ knitr::opts_chunk$set(
 
 # scerden.aemetadb
 
+```{r}
+library(scerden.aemetadb)
+library(tidyverse)
+```
+
+
 R data pkg that makes avaiable two tables containing the subset of the 
 [array express](http://www.ebi.ac.uk/arrayexpress/) data relevant to Saccharomyces cerevisiae:  
 1. `ae_arrays` contains information on experimental platforms  
+```{r}
+ae_arrays %>% glimpse()
+```
+
 2. `ae_experiments` contains information on experiments  
+
+```{r}
+ae_experiments %>% glimpse()
+```
+
 
 In principle this should be a superset of array express only data and the GEO/SRA databases over 
 at NCBI but this is not the case in practise.  
