--- a/README.Rmd
+++ b/README.Rmd
@@ -39,6 +39,11 @@ ae_experiments %>% glimpse()
 ae_links
 ```
 
+4. `ae_cel_files`
+```{r}
+ae_cel_files
+```
+
 
 In principle this should be a superset of array express only data and the GEO/SRA databases over 
 at NCBI but this is not the case in practise.  
